# game-of-life

./: .gitignore  CMakeLists.txt  compile.bat  run.bat  setup.bat
include/: aliases.hpp  index_buffer.hpp  shader.hpp  vertex_array.hpp  vertex_buffer.hpp  window.hpp
src/: block_vertex_array.cpp  index_buffer.cpp  main.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
